--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "handlebars": "^4.7.8",
     "vite-plugin-handlebars": "^2.0.0"
   },
