--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "prettier --check './**/*.{html,css,scss,js}'",
-    "format": "prettier --write './**/*.{html,css,scss,js}'",
-    "lint": "stylelint **/*.css",
+    "check": "prettier --check './src/**/*.{html,css,scss,js,hbs}'",
+    "format": "prettier --write './src/**/*.{html,css,scss,js,hbs}'",
+    "lint": "stylelint **/*.css,scss",
     "lintfix": "stylelint **/*.css --fix",
     "checkAll": "npm run check && npm run lint",
     "fixAll": "npm run format && npm run lintfix",
