--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "preview": "vite preview",
     "check": "prettier --check './src/**/*.{html,css,scss,js,hbs}'",
     "format": "prettier --write './src/**/*.{html,css,scss,js,hbs}'",
-    "lint": "stylelint **/*.css,scss",
-    "lintfix": "stylelint **/*.css --fix",
-    "checkAll": "npm run check && npm run lint",
-    "fixAll": "npm run format && npm run lintfix",
+    "stylelint": "stylelint ./src/**/*.{css,scss}",
+    "stylelintFix": "stylelint ./src/**/*.{css,scss} --fix",
+		"eslint": "npx eslint ./src/**/*.{ts,js}",
+		"eslitFix": "npx eslint --fix ./src/**/*.{ts,js}",
+    "checkAll": "npm run check && npm run stylelint && npm run eslint",
+    "fixAll": "npm run format && npm run stypelintFix && npm run eslintFix",
     "start": "npm run build && npm run preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.6",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "postcss-combine-media-query": "^1.0.1",
     "prettier": "^3.5.3",
     "sass-embedded": "^1.86.0",
     "stylelint": "^16.16.0",
+    "typescript-eslint": "^8.29.0",
     "vite": "^6.2.0"
   },
   "dependencies": {
