--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sass-embedded": "^1.86.0",
     "stylelint": "^16.16.0",
     "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-checker": "^0.9.2"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
