--- a/package.json
+++ b/package.json
@@ -7,31 +7,37 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "prettier --check './src/**/*.{html,css,scss,js,hbs}'",
-    "format": "prettier --write './src/**/*.{html,css,scss,js,hbs}'",
-    "stylelint": "stylelint ./src/**/*.{css,scss}",
-    "stylelintFix": "stylelint ./src/**/*.{css,scss} --fix",
-    "eslint": "npx eslint ./src/**/*.{ts,js}",
-    "eslitFix": "npx eslint --fix ./src/**/*.{ts,js}",
+    "check": "prettier --check './src/*.{html,css,scss,js,hbs}'",
+    "format": "prettier --write './src/*.{html,scss}'",
+    "stylelint": "stylelint ./src/*.{scss}",
+    "stylelintFix": "stylelint ./src/*.{scss} --fix",
+    "eslint": "npx eslint ./src/*.{ts,js}",
+    "eslitFix": "npx eslint --fix ./src/*.{ts,js}",
     "checkAll": "npm run check && npm run stylelint && npm run eslint",
     "fixAll": "npm run format && npm run stypelintFix && npm run eslintFix",
     "start": "npm run build && npm run preview"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.6",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.3.1",
     "eslint-plugin-promise": "^6.6.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "postcss-combine-media-query": "^1.0.1",
-    "prettier": "^3.5.3",
+    "prettier": "3.5.3",
     "sass-embedded": "^1.86.0",
-    "stylelint": "^16.16.0",
+    "stylelint": "^16.19.1",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.11.1",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.2.0",
     "vite-plugin-checker": "^0.9.2"
