--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "prettier --check './src/*.{html,css,scss,js,hbs}'",
-    "format": "prettier --write './src/*.{html,scss}'",
-    "stylelint": "stylelint ./src/*.{scss}",
-    "stylelintFix": "stylelint ./src/*.{scss} --fix",
+    "check": "prettier --check './src/**/*.{html,scss}'",
+    "format": "prettier --write './src/**/*.{html,scss}'",
+    "stylelint": "stylelint './src/**/*.{scss}'",
+    "stylelintFix": "stylelint './src/*.{scss}' --fix",
     "eslint": "npx eslint ./src/*.{ts,js}",
     "eslitFix": "npx eslint --fix ./src/*.{ts,js}",
     "checkAll": "npm run check && npm run stylelint && npm run eslint",
