--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,16 @@
 {
 	"extends": [
-		"airbnb",
-		"plugin:prettier/recommended"
+		"eslint-config-standard",
+		"plugin:prettier/recommended",
+		"eslint-config-prettier"
 	],
 	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
+	"plugins": [
+		"eslint-plugin-prettier",
+		"@typescript-eslint"
+	],
 	"rules": {
 		"max-len": [2, 100],
-		"@typescript-eslint/no-unused-vars": 2,
+		"@typescript-eslint/no-unused-vars": 2
 	}
 }
