--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "prettier --check './src/**/*.{html,scss}'",
-    "format": "prettier --write './src/**/*.{html,scss}'",
-    "stylelint": "stylelint './src/**/*.{scss}'",
-    "stylelintFix": "stylelint './src/*.{scss}' --fix",
-    "eslint": "npx eslint ./src/*.{ts,js}",
-    "eslitFix": "npx eslint --fix ./src/*.{ts,js}",
+    "check": "prettier --check './**/*.{html,scss}'",
+    "format": "prettier --write './**/*.{html,scss}'",
+    "stylelint": "stylelint **/*.scss",
+    "stylelintFix": "stylelint **/*.scss --fix",
+    "eslint": "npx eslint ./**/*.{ts,js}",
+    "eslitFix": "npx eslint --fix ./**/*.{ts,js}",
     "checkAll": "npm run check && npm run stylelint && npm run eslint",
     "fixAll": "npm run format && npm run stypelintFix && npm run eslintFix",
     "start": "npm run build && npm run preview"
