fix: styling code

--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "prettier --check './**/*.{html,scss}'",
-    "format": "prettier --write './**/*.{html,scss}'",
+    "check": "prettier --check './**/*.{html,ts,scss}'",
+    "format": "prettier --write './**/*.{html,ts,scss}'",
     "stylelint": "stylelint **/*.scss",
     "stylelintFix": "stylelint **/*.scss --fix",
-    "eslint": "npx eslint ./**/*.{ts,js}",
-    "eslitFix": "npx eslint --fix ./**/*.{ts,js}",
+    "eslint": "npx eslint ./src/**/*.{ts,js}",
+    "eslintFix": "npx eslint --fix ./src/**/*.{ts,js}",
 		"tslint": "tsc --noEmit",
     "checkAll": "npm run check && npm run stylelint && npm run eslint && npm run tslint",
-    "fixAll": "npm run format && npm run stypelintFix && npm run eslintFix && npm run tslint",
+    "fixAll": "npm run format && npm run stylelintFix && npm run eslintFix && npm run tslint",
     "start": "npm run build && npm run preview"
   },
   "devDependencies": {
