--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,26 @@
 {
+	"root": true,
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true
+	},
 	"extends": [
-		"eslint-config-standard",
-		"plugin:prettier/recommended",
-		"eslint-config-prettier"
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module",
+		"project": "./tsconfig.json" // Указывает на ваш tsconfig.json
+	},
 	"plugins": [
-		"eslint-plugin-prettier",
 		"@typescript-eslint"
 	],
 	"rules": {
-		"max-len": [2, 100],
-		"@typescript-eslint/no-unused-vars": 2
+		"no-case-declarations": "off",
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/no-this-alias": "off"
 	}
 }
