--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,7 +4,7 @@
 	],
 	"extends": "stylelint-config-standard-scss",
 	"rules": {
-		"color-hex-case": "lower"
+		"selector-class-pattern": null
 	},
 	"ignoreFiles": [
 		"build/*"
