--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "stylelintFix": "stylelint **/*.scss --fix",
     "eslint": "npx eslint ./src/**/*.{ts,js}",
     "eslintFix": "npx eslint --fix ./src/**/*.{ts,js}",
-		"tslint": "tsc --noEmit",
+    "tslint": "tsc --noEmit",
     "checkAll": "npm run check && npm run stylelint && npm run eslint && npm run tslint",
     "fixAll": "npm run format && npm run stylelintFix && npm run eslintFix && npm run tslint",
     "start": "npm run build && npm run preview"
@@ -39,6 +39,7 @@
     "stylelint": "^16.19.1",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.2.0",
     "vite-plugin-checker": "^0.9.2"
