--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   from = "/*"
   to = "/index.html"
   status = 200
+[[headers]]
+  for = "/*" # you can configure the correct paths here
+  [headers.values]
+    access-control-allow-origin = "*"
