--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm-run-all test check lint"
+		}
+	},
+	"scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "check": "prettier --check './**/*.{html,ts,scss}'",
     "format": "prettier --write './**/*.{html,ts,scss}'",
-    "stylelint": "stylelint **/*.scss",
-    "stylelintFix": "stylelint **/*.scss --fix",
-    "eslint": "npx eslint ./src/**/*.{ts,js}",
-    "eslintFix": "npx eslint --fix ./src/**/*.{ts,js}",
+    "lint:scss": "stylelint **/*.scss",
+    "lintFix:scss": "stylelint **/*.scss --fix",
+    "lint:ts": "npx eslint ./src/**/*.{ts,js}",
+    "lintFix:ts": "npx eslint --fix ./src/**/*.{ts,js}",
     "tslint": "tsc --noEmit",
-    "checkAll": "npm run check && npm run stylelint && npm run eslint && npm run tslint",
-    "fixAll": "npm run format && npm run stylelintFix && npm run eslintFix && npm run tslint",
-    "start": "npm run build && npm run preview"
+    "lint": "npm-run-all --parallel lint:*",
+    "lintFix": "npm-run-all --parallel lint:*",
+    "start": "npm run build && npm run preview",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@jest/globals": "^30.0.3",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "autoprefixer": "^10.4.21",
@@ -32,13 +39,18 @@
     "eslint-plugin-prettier": "^5.3.1",
     "eslint-plugin-promise": "^6.6.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jest": "^30.0.3",
+    "jest-environment-jsdom": "^30.0.2",
+    "lint-staged": "^16.1.2",
     "postcss": "^8.5.3",
-    "postcss-combine-media-query": "^1.0.1",
+    "postcss-combine-media-query": "^2.0.0",
     "prettier": "3.5.3",
     "sass-embedded": "^1.86.0",
     "stylelint": "^16.19.1",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.2.0",
@@ -47,8 +59,9 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
     "handlebars": "^4.7.8",
+    "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
-    "vite-plugin-handlebars": "^2.0.0"
+    "vite-plugin-handlebars": "^1.5.0"
   },
   "browserslist": [
     "last 2 versions",
