--- a/package.json
+++ b/package.json
@@ -1,72 +1,71 @@
 {
-  "name": "middle.messenger.praktikum.yandex",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-	"husky": {
-		"hooks": {
-			"pre-commit": "npm-run-all test check lint"
-		}
-	},
+	"name": "middle.messenger.praktikum.yandex",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "prettier --check './**/*.{html,ts,scss}'",
-    "format": "prettier --write './**/*.{html,ts,scss}'",
-    "lint:scss": "stylelint **/*.scss",
-    "lintFix:scss": "stylelint **/*.scss --fix",
-    "lint:ts": "npx eslint ./src/**/*.{ts,js}",
-    "lintFix:ts": "npx eslint --fix ./src/**/*.{ts,js}",
-    "tslint": "tsc --noEmit",
-    "lint": "npm-run-all --parallel lint:*",
-    "lintFix": "npm-run-all --parallel lint:*",
-    "start": "npm run build && npm run preview",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@jest/globals": "^30.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
-    "autoprefixer": "^10.4.21",
-    "cssnano": "^7.0.6",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.3.1",
-    "eslint-plugin-promise": "^6.6.0",
-    "globals": "^16.0.0",
-    "husky": "^9.1.7",
-    "jest": "^30.0.3",
-    "jest-environment-jsdom": "^30.0.2",
-    "lint-staged": "^16.1.2",
-    "postcss": "^8.5.3",
-    "postcss-combine-media-query": "^2.0.0",
-    "prettier": "3.5.3",
-    "sass-embedded": "^1.86.0",
-    "stylelint": "^16.19.1",
-    "stylelint-config-standard-scss": "^14.0.0",
-    "stylelint-scss": "^6.11.1",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.0",
-    "vite-plugin-checker": "^0.9.2"
-  },
-  "dependencies": {
-    "@fontsource/inter": "^5.2.5",
-    "handlebars": "^4.7.8",
-    "ts-node": "^10.9.2",
-    "uuid": "^11.1.0",
-    "vite-plugin-handlebars": "^1.5.0"
-  },
-  "browserslist": [
-    "last 2 versions",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "prettier --check './**/*.{html,ts,scss}'",
+		"format": "prettier --write './**/*.{html,ts,scss}'",
+		"lint:stylelint": "stylelint **/*.scss",
+		"lintFix:stylelint": "stylelint **/*.scss --fix",
+		"lint:eslint": "npx eslint ./src/**/*.{ts,js}",
+		"lintFix:eslint": "npx eslint --fix ./src/**/*.{ts,js}",
+		"lint:ts": "tsc --noEmit",
+		"lint": "npm-run-all --parallel lint:*",
+		"lintFix": "npm-run-all --parallel lint:*",
+		"start": "npm run build && npm run preview",
+		"test": "jest",
+//		"prepare": "husky",
+		"validate-commit": "npm-run-all test check lint"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.23.0",
+		"@jest/globals": "^30.0.3",
+		"@types/jest": "^30.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.31.1",
+		"@typescript-eslint/parser": "^8.31.1",
+		"autoprefixer": "^10.4.21",
+		"cssnano": "^7.0.6",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^10.1.2",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-n": "^16.6.2",
+		"eslint-plugin-prettier": "^5.3.1",
+		"eslint-plugin-promise": "^6.6.0",
+		"globals": "^16.0.0",
+		"husky": "^9.1.7",
+		"jest": "^30.0.3",
+		"jest-environment-jsdom": "^30.0.2",
+		"lint-staged": "^16.1.2",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.5.3",
+		"postcss-combine-media-query": "^2.0.0",
+		"prettier": "3.5.3",
+		"sass-embedded": "^1.86.0",
+		"stylelint": "^16.19.1",
+		"stylelint-config-standard-scss": "^14.0.0",
+		"stylelint-scss": "^6.11.1",
+		"ts-jest": "^29.4.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.29.0",
+		"vite": "^6.2.0",
+		"vite-plugin-checker": "^0.9.2"
+	},
+	"dependencies": {
+		"@fontsource/inter": "^5.2.5",
+		"handlebars": "^4.7.8",
+		"ts-node": "^10.9.2",
+		"uuid": "^11.1.0",
+		"vite-plugin-handlebars": "^1.5.0"
+	},
+	"browserslist": [
+		"last 2 versions",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
