--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"preview": "vite preview",
 		"check": "prettier --check './**/*.{html,ts,scss}'",
 		"format": "prettier --write './**/*.{html,ts,scss}'",
-		"lint:stylelint": "stylelint **/*.scss",
-		"lintFix:stylelint": "stylelint **/*.scss --fix",
+		"lint:stylelint": "stylelint ./src/**/*.scss",
+		"lintFix:stylelint": "stylelint ./src/**/*.scss --fix",
 		"lint:eslint": "npx eslint ./src/**/*.{ts,js}",
 		"lintFix:eslint": "npx eslint --fix ./src/**/*.{ts,js}",
 		"lint:ts": "tsc --noEmit",
