--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"jest": "^30.0.3",
 		"jest-environment-jsdom": "^30.0.2",
 		"lint-staged": "^16.1.2",
+		"mocha": "^11.7.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.5.3",
 		"postcss-combine-media-query": "^2.0.0",
