--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.31.1",
 		"@typescript-eslint/parser": "^8.31.1",
 		"autoprefixer": "^10.4.21",
+		"chai": "^5.2.0",
 		"cssnano": "^7.0.6",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.2",
